--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <script src="./script.js"></script>
+        <script src="./bundle.js"></script>
     </head>
     <body>
         <h1>WASM Playground</h1>
